fixed overlap issue

--- a/main.css
+++ b/main.css
@@ -27,6 +27,10 @@ body{
     border: 0%;
 }
 
+.for-section{
+    margin-top: 200px;
+}
+
 #Title {
     color: black;
     opacity: 0.8;
